[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# TODO Remove dynamic linking before launch
[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_rapier3d = "0.28.0"
